[package]
name = "wurm"
version = "1.1.0"
edition = "2021"
description = "Non-fatal, strongly typed errors"
authors = ["Alexander Kernozhitsky <kernalex256@yandex.by>"]
readme = "README.md"
homepage = "https://github.com/alex65536/wurm"
repository = "https://github.com/alex65536/wurm"
license = "MIT"
keywords = ["warning", "error"]
categories = ["rust-patterns"]

[dev-dependencies]
thiserror = "1.0.32"
